# backend/config/routes.rb
@@ -9,7 +9,7 @@ Rails.application.routes.draw do
   namespace :api do
     resources :users, only: [ :index ]
     resources :user_assignments, only: [ :index, :show ] do
-      resources :questions, only: [ :index ], controller: 'user_assignment_questions'
+      resources :questions, only: [ :index, :create ], controller: 'user_assignment_questions'
     end
     resources :user_assignment_sessions, only: [ :create, :update ]
   end
